2008-06-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* 24x24/apps/Makefile.am:
	* 24x24/apps/gnome-eyes.png:
	Remove another deprecated icon

2008-06-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* 16x16/apps/Makefile.am:
	* 16x16/apps/gnome-settings-ui-behavior.*:
	* 22x22/apps/Makefile.am:
	* 22x22/apps/gnome-settings-ui-behavior.*:
	* 24x24/apps/Makefile.am:
	* 24x24/apps/gnome-settings-sound.png:
	* 24x24/apps/gnome-settings-ui-behavior.png:
	* 24x24/apps/stock-ticker.png:
	* 48x48/apps/Makefile.am:
	* 48x48/apps/eyes.png:
	* 48x48/apps/gnome-settings-sound.png:
	* 48x48/apps/stock-ticker.png:
	Remove some more deprected icons
	
2008-06-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* 24x24/apps/Makefile.am:
	* 24x24/apps/gnome-unknown.png:
	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-unknown.png:
	Remove gnome-unknown icon as image-missing can be used instead

2008-05-07  Michael Monreal <mmonreal@svn.gnome.org>

	* 22x22/status/media-playlist-shuffle.*:
	* 24x24/status/media-playlist-shuffle.png: correct placement.

	Fixes bug #527010

2008-05-07  Lapo Calamandrei <calamandrei@gmail.com>

	* Renamed system-software-installer to system-software-install as for
	  latest naming specs additions.
	* 24x24/categories/preferences-desktop-peripherals.png: correct the
	  size. Fixes bug #531366

2008-05-05  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/system-software-installer.png: prevent upscaling 
	  a wrong size. Fixes bug #110367

2008-04-19  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-grecord.*:
	Remove the old gnome-grecord icon

	Fixes #526933

2008-04-19  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Don't hardcode the path to true as /bin/true

	Fixes #525988

2008-04-12  Rodney Dawes  <dobey.pwns@gmail.com>

	* */stock/io/Makefile.am:
	* */stock/io/stock_bluetooth.*:
	Remove stock_bluetooth

2008-03-30  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.23.0 for development series