@@ -1,4 +1,12 @@
-2008-06-08  Rodney Dawes  <dobey.pwns@gmail.com>
+2008-06-09  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* 48x48/animations/Makefile.am:
+	* 48x48/apps/Makefile.am:
+	* 48x48/apps/gnome-searchtool-animation.png:
+	* 48x48/apps/gnome-searchtool-animation-rest.png:
+	Replace the gnome-searchtool animation with symlinks to process-*
+
+2008-06-09  Rodney Dawes  <dobey.pwns@gmail.com>
 
 	* 24x24/apps/Makefile.am:
 	* 24x24/apps/gnome-eyes.png:
